SPCTR-1989: Fixed Mobile Front-end View when Admin Bar is visible, and Updated Caption Multiline CSS

--- a/src/blocks/image-gallery/style.scss
+++ b/src/blocks/image-gallery/style.scss
@@ -649,6 +649,7 @@
 				display: flex;
 				align-items: center;
 				justify-content: center;
+				text-align: center;
 			}
 
 			&--thumbnails {
